[package]
name = "rivo_llvm"
version = "0.1.0"
authors = ["Nate Nystrom <nate.nystrom@gmail.com>"]
edition = "2018"
description = "LLVM backend for Ivo"
license = "BSD-3"
readme = "README.md"
repository = "https://github.com/nystrom/rivo-llvm.git"
homepage = "https://github.com/nystrom/rivo-llvm"
# build = "build.rs"

[profile.release]
opt-level = 3
lto = true

[dependencies]
num = "*"
pretty = "*"
rpds = "*"
failure = "*"
trace = "*"
lazy_static = "*"
string-interner = "0.7.0"

llvm-sys = "*"
libc = "*"

immix_rust = { git = "https://github.com/nystrom/immix-rust.git" }

[patch.crates-io]
trace = { git = "https://github.com/nystrom/trace.git" }
quickcheck = { git = "https://github.com/nystrom/quickcheck.git" }
quickcheck_macros = { git = "https://github.com/nystrom/quickcheck.git" }

[dev-dependencies]
pretty_assertions = "*"
quickcheck = "*"
quickcheck_macros = "*"

# [build-dependencies]
# bindgen = "*"

[features]
immix = []
yieldpoints = ["immix"]
default = ["fast"]
malloc = []
optimize = []
fast = ["immix", "optimize"]


